; ModuleID = '/home/carl/AnghaBench/qmk_firmware/quantum/debounce/extr_sym_g.c_debounce.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/quantum/debounce/extr_sym_g.c_debounce.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@debouncing = common dso_local global i32 0, align 4
@debouncing_time = common dso_local global i32 0, align 4
@DEBOUNCE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @debounce(i32* %0, i32* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load i32, i32* %8, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %4
  store i32 1, i32* @debouncing, align 4
  %13 = call i32 (...) @timer_read()
  store i32 %13, i32* @debouncing_time, align 4
  br label %14

14:                                               ; preds = %12, %4
  %15 = load i32, i32* @debouncing, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %41

17:                                               ; preds = %14
  %18 = load i32, i32* @debouncing_time, align 4
  %19 = call i64 @timer_elapsed(i32 %18)
  %20 = load i64, i64* @DEBOUNCE, align 8
  %21 = icmp sgt i64 %19, %20
  br i1 %21, label %22, label %41

22:                                               ; preds = %17
  store i32 0, i32* %9, align 4
  br label %23

23:                                               ; preds = %37, %22
  %24 = load i32, i32* %9, align 4
  %25 = load i32, i32* %7, align 4
  %26 = icmp slt i32 %24, %25
  br i1 %26, label %27, label %40

27:                                               ; preds = %23
  %28 = load i32*, i32** %5, align 8
  %29 = load i32, i32* %9, align 4
  %30 = sext i32 %29 to i64
  %31 = getelementptr inbounds i32, i32* %28, i64 %30
  %32 = load i32, i32* %31, align 4
  %33 = load i32*, i32** %6, align 8
  %34 = load i32, i32* %9, align 4
  %35 = sext i32 %34 to i64
  %36 = getelementptr inbounds i32, i32* %33, i64 %35
  store i32 %32, i32* %36, align 4
  br label %37

37:                                               ; preds = %27
  %38 = load i32, i32* %9, align 4
  %39 = add nsw i32 %38, 1
  store i32 %39, i32* %9, align 4
  br label %23

40:                                               ; preds = %23
  store i32 0, i32* @debouncing, align 4
  br label %41

41:                                               ; preds = %40, %17, %14
  ret void
}

declare dso_local i32 @timer_read(...) #1

declare dso_local i64 @timer_elapsed(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
